@@ -108,6 +108,7 @@ groff_TESTS = \
   src/roff/groff/tests/regression_savannah_58162.sh \
   src/roff/groff/tests/regression_savannah_58337.sh \
   src/roff/groff/tests/regression_savannah_59202.sh \
+  src/roff/groff/tests/safer-mode-works.sh \
   src/roff/groff/tests/set-stroke-thickness.sh \
   src/roff/groff/tests/sizes-request-works.sh \
   src/roff/groff/tests/so-request-accepts-embedded-space-in-arg.sh \
