@@ -1,3 +1,10 @@
+2025-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	[groff]: Regression-test Savannah #67815.
+
+	* src/roff/groff/tests/safer-mode-works.sh: Do it.
+	* src/roff/groff/groff.am (groff_TESTS): Run test.
+
 2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/input.cpp (interpolate_rg): Rename this...
